--- a/angular.json
+++ b/angular.json
@@ -107,5 +107,12 @@
   },
   "cli": {
     "analytics": false
+  },
+  "budgets": [
+  {
+    "type": "initial",
+    "maximumWarning": "500kb",
+    "maximumError": "1mb"
   }
+]
 }
