--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.7",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.7",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
@@ -21,6 +23,7 @@
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
+    "browser-image-compression": "^2.0.2",
     "chart.js": "^4.4.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
